removed photo to appear on phone

--- a/FrontEnd/src/pretty.css
+++ b/FrontEnd/src/pretty.css
@@ -122,3 +122,13 @@ textarea {
 .send-message-box button:hover {
     background-color: #003f88;
 }
+
+.my-photo {
+    display: block;
+}
+
+@media (max-width: 768px) {
+    .my-photo {
+        display: none;
+    }
+}
