--- a/style.css
+++ b/style.css
@@ -3,23 +3,37 @@
     padding: 0%;
     margin: 0%;
 }
-
+img {
+    width: 100%;
+    max-width: 300px;
+    height: auto;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+}
 .hero-header-section {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 100dvh
 }
 
 .services-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+background: #f9fafb;
 }
 
 .services-text-section {
     text-align: center; /* centers text horizontally */
+}
+
+.grid-services-section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; /* centers cards horizontally */
+    gap: 20px; /* space between cards */
+    max-width: 2000px;
+    margin: 0 auto; /* centers the grid container */
+    padding: 20px;
 }
 
 .card {
@@ -30,12 +44,18 @@
   margin: 10px;
   display: inline-block;
   vertical-align: top;
-  background-color: #f0f8ff;
+  background-color: #ffffff;
 }
-.card-title { font-weight: bold; }
+.icon-plus-title{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.card-icon { width: 32px; height: 32px;}
+.card-title { font-weight: bold; font-size: 16px;}
 .card-subtitle { color: gray; font-size: 0.9rem; }
-.card a { margin-right: 5px; color: blue; text-decoration: none; }
- 
+.card a { margin-right: 5px; color: #e5e5e5; text-decoration: none; }
+ .card ul { padding-left: 10px}
 .call-to-action {
     padding: 40px 20px;
 }
@@ -53,7 +73,6 @@
     margin: 0 auto;
 }
 
-
 .call-to-action-card {
     display: flex;
     align-items: start;
@@ -65,6 +84,51 @@
     display: flex;
     flex-direction: row;
 
+}
+
+.card-subtitle{
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+.borderless-card {
+    max-width: 300px;
+    margin: 10px auto;
+    padding-left: 20px;
+    flex: 1;
+    text-align: left;   /* force text left */
+}
+.borderless-card {
+    display: flex;
+    flex-direction: column;
+    margin-right: 20px;
+    margin-bottom: 10px;
+}
+
+.why-us-title {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 10px;
+    height: 80px;
+}
+.why-us-pic {
+    
+}
+.why-us-section {
+    display: flex;
+    margin: 10px auto;
+    justify-content: center;
+    height: auto;
+}
+.why-us-service-section {
+
+}
+
+.borderless-card-subtitle {
+    font-size: 0.8rem;
+    color: gray;
+    margin-bottom: 1px;
+    height: 56px;
 }
 /*
 Quote card 
@@ -115,7 +179,7 @@ textarea {
 button {
     margin-top: 12px;
     padding: 8px;
-    background: #0066ff;
+    background: rgb(104, 104, 236);
     color: #fff;
     border: none;
     border-radius: 6px;
@@ -124,6 +188,7 @@ button {
     transition: background 0.3s ease;
     
 }
+
 
 .get-in-touch {
     display: flex;
@@ -138,7 +203,7 @@ button {
     border-radius: 10px;
     padding: 1rem;
     margin: 10px;
-    background-color: #f0f8ff;
+    background-color: rgb(255, 255, 255);
 }
 
 .get-in-touch-card h3 {
